css/style.css
html {
  scroll-behavior: smooth;
}

.subtitle {
  font-weight: 500;
  font-size: 18px;
  line-height: 22px;
  color: #070707;
  margin: 0;
  padding: 0;
}

.title {
  font-weight: 700;
  font-size: 34px;
  line-height: 42px;
  color: #070707;
  margin: 0;
  padding: 0;
}

* {
  margin: 0;
  padding: 0;
}

.active {
  color: #070707 !important;
  font-weight: 700 !important;
  -webkit-transform: scale(1.07);
          transform: scale(1.07);
  display: inline-block;
}

.container {
  max-width: 940px;
  margin: 0 auto;
  position: relative;
}

body {
  font-family: 'Gilroy', sans-serif;
}

header.nav-menu {
  position: relative;
  z-index: 100;
}

header.nav-menu .menu {
  position: fixed;
  max-width: 940px;
  width: 100%;
  min-height: 56px;
  padding-top: 33px;
  background-color: #fff;
  opacity: 0.95;
  top: 0;
  z-index: 1000;
}

header.nav-menu .menu .menu-list {
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

header.nav-menu .menu .menu-list a {
  text-decoration: none;
  color: #828282;
  font-weight: 700;
}

header.nav-menu .menu .mobile-burger {
  display: none;
}

header.nav-menu .menu .divider {
  width: 100%;
  height: 1px;
  border-top: 1px solid #828282;
  position: absolute;
  margin-top: 38px;
  -webkit-transition: 1s all;
  transition: 1s all;
}

header.nav-menu .scroll-bg {
  width: 100%;
  position: fixed;
  height: 89px;
  top: 0;
  left: 0;
  background-color: #fff;
  opacity: 0.95;
  display: none;
  -webkit-transition: 0.5s all;
  transition: 0.5s all;
}

.header {
  padding: 32px 0 104px 0;
  text-align: center;
  color: #070707;
}

.header .title-block {
  margin-top: 104px;
  text-align: left;
  position: relative;
}

.header .title-block h2.header-name {
  font-weight: 700;
  font-size: 34px;
  line-height: 37px;
  color: #070707;
}

.header .title-block h1.header-descr {
  position: absolute;
  left: 45%;
  bottom: 11%;
}

.header .title-block .lang {
  font-weight: 700;
  font-size: 16px;
  color: #828282;
  -webkit-writing-mode: vertical-lr;
      -ms-writing-mode: tb-lr;
          writing-mode: vertical-lr;
  -webkit-transform: rotate(-180deg);
          transform: rotate(-180deg);
  position: absolute;
  right: 0;
  bottom: 12%;
}

.header .title-block .lang:hover {
  cursor: default;
}

.header .title-block .lang span.ru, .header .title-block .lang span.eng:hover {
  cursor: pointer;
}

.header .header-img {
  margin-top: 40px;
  width: 100%;
}

.about {
  padding: 93px 0 93px 0;
  text-align: center;
  background-color: #F6F6F6;
}

.about-descr {
  max-width: 600px;
  margin: 20px auto 0 auto;
}

.about .elem:not(:last-child) {
  margin-bottom: 45px;
}

.skills {
  padding: 91px 0 110px 0;
  text-align: center;
}

.skills .subtitle {
  margin-top: 69px;
}

.skills-wrapper {
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  margin-top: 35px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.skills-item {
  width: 25%;
  margin-top: 50px;
}

.skills-item img {
  max-width: 89px;
  max-height: 89px;
}

.skills-item-descr {
  font-weight: 700;
  font-size: 14px;
  line-height: 17px;
  text-align: center;
  color: #828282;
  margin-top: 23px;
}

.skills-item-stars {
  margin-top: 41px;
}

.skills-item-stars .star:not(:last-child) {
  margin-right: 9px;
}

.portfolio {
  position: relative;
  z-index: 1;
  padding: 113px 0 96px 0;
  text-align: center;
  background-color: #F6F6F6;
}

.portfolio-work {
  margin-top: 53px;
}

.portfolio-work img {
  -webkit-transition: 0.3s all;
  transition: 0.3s all;
  width: 100%;
  -webkit-box-shadow: 0px 0px 45px -25px #000;
          box-shadow: 0px 0px 45px -25px #000;
}

.portfolio-work img:hover {
  -webkit-transform: scale(1.05);
          transform: scale(1.05);
}

.portfolio-work-descr {
  margin: 45px auto 0 auto;
  font-size: 18px;
  max-width: 530px;
}

.contacts {
  padding: 109px 0  86px 0;
  text-align: center;
}

.contacts-subtitle {
  margin: 24px auto 0 auto;
  max-width: 400px;
}

.contacts-btn {
  display: inline-block;
  margin: 0 auto;
  margin-top: 30px;
  background-color: #000;
  padding: 12px 30px;
  text-decoration: none;
  color: #fff;
  font-size: 18px;
  line-height: 22px;
  font-weight: 700;
  border-radius: 30px;
  -webkit-transition: 0.3s all;
  transition: 0.3s all;
}

.contacts-btn:hover {
  -webkit-transform: scale(1.05);
          transform: scale(1.05);
  opacity: 0.85;
}

footer {
  text-align: center;
  padding-bottom: 20px;
  font-size: 14px;
  line-height: 17px;
  color: #828282;
}

footer-descr {
  max-width: 400px;
  margin: 0 auto;
}

.github-link {
  display: block;
  text-decoration: none;
  padding: 12px 30px;
  border-radius: 30px;
  position: fixed;
  right: 30px;
  bottom: 30px;
  z-index: 100;
  background-color: black;
  color: white;
  -webkit-transition: 0.3s all;
  transition: 0.3s all;
}

.github-link:hover {
  -webkit-transform: scale(1.05);
          transform: scale(1.05);
  opacity: 0.85;
}

@media (max-width: 940px) {
  section {
    padding-right: 30px !important;
    padding-left: 30px !important;
  }
}

@media (max-width: 800px) {
  .skills-item {
    width: 50%;
  }
}

@media (max-width: 500px) {
  .skills-item {
    width: 100%;
  }
}

@media (max-width: 767px) {
  header.nav-menu .mobile-burger {
    display: block;
    position: fixed;
    height: 20px;
    top: 67px;
    height: 20px;
    right: 63px;
    z-index: 10;
  }
  header.nav-menu .mobile-burger:before, header.nav-menu .mobile-burger:after {
    content: '';
    width: 33px;
    height: 4px;
    background-color: #000;
    position: absolute;
    -webkit-transition: all 0.6s ease;
    transition: all 0.6s ease;
  }
  header.nav-menu .mobile-burger:after {
    bottom: 0;
  }
  header.nav-menu .mobile-burger.mobile-active:before {
    -webkit-transform: rotate(45deg);
            transform: rotate(45deg);
    top: 8px;
    -webkit-transition: all 0.6s ease;
    transition: all 0.6s ease;
  }
  header.nav-menu .mobile-burger.mobile-active:after {
    -webkit-transform: rotate(-45deg);
            transform: rotate(-45deg);
    top: 8px;
    -webkit-transition: all 0.6s ease;
    transition: all 0.6s ease;
  }
  header.nav-menu .mobile-burger.mobile-active span {
    -webkit-transform: scale(0);
            transform: scale(0);
    -webkit-transition: all 0.6s ease;
    transition: all 0.6s ease;
  }
  header.nav-menu .mobile-burger span {
    width: 33px;
    height: 4px;
    background-color: #000;
    position: absolute;
    top: 8px;
    -webkit-transition: all 0.6s ease;
    transition: all 0.6s ease;
  }
  header.nav-menu .menu .divider {
    display: none;
  }
  .scroll-bg {
    display: none;
  }
  header.nav-menu .menu {
    position: fixed;
    right: -100%;
    padding: 66px 28px 57px 28px;
    width: 50%;
    height: 100vh;
    background-color: #fff;
    opacity: 0.95;
    z-index: 0;
    -webkit-transition: all 0.6s ease;
    transition: all 0.6s ease;
  }
  header.nav-menu .menu.mobile-active {
    right: 0;
  }
  header.nav-menu .menu .menu-list {
    display: block;
    font-size: 34px;
  }
  header.nav-menu .menu .menu-list li:not(:last-child) {
    margin-bottom: 68px;
  }
}
/*# sourceMappingURL=style.css.map */

